--- a/insights.html
+++ b/insights.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
-<body class="insights-page">
+<body class="insights-page">a
 
     <div class="dev-banner" id="dev-status-banner">
         <div class="dev-banner-content">
@@ -129,6 +129,24 @@
 
         <div class="insights-feed">
         <span style="display:none;">🆕</span>
+        <a href="articles/2026-05-16_2026_new_years_update/article.html" class="insight-item-link" data-category="briefing">
+            <article class="insight-card">
+                <div class="insight-thumbnail">
+                    <img src="articles/2026-05-16_2026_new_years_update/small.jpg" alt="Thumbnail" style="width:100%; border-radius: 8px; margin-bottom: 1.5rem;">
+                </div>
+                <div class="insight-info">
+                    <div class="card-meta-top">
+                        <span class="lang-content active" data-lang="english">briefing</span>
+                    </div>
+                    <h2 class="lang-content active" data-lang="english">Greenland’s Readiness for New Shipping and Travel</h2>
+                    <p class="excerpt lang-content active" data-lang="english">As of January 2026, Greenland has finalized a comprehensive modernization of its primary hubs, readying the nation for the projected surge i...</p>
+                    <div class="insight-footer">
+                        <span class="date">31 January 2026</span>
+                    </div>
+                </div>
+            </article>
+        </a>
+
 <a href="articles/2026-06-17/article.html" class="insight-item-link" data-category="commentary">
     <article class="insight-card">
         <div class="insight-thumbnail">
@@ -150,7 +168,7 @@
             <p class="excerpt lang-content" data-lang="danish">I takt med at den internationale interesse for Arktis når nye højder, bevæger Grønland sig fra passiv geografi mod aktivt diplomati...</p>
             
             <div class="insight-footer">
-                <span class="date">20 May 2026</span>
+                <span class="date">20 January 2026</span>
             </div>
         </div>
     </article>
@@ -177,7 +195,7 @@
             <p class="excerpt lang-content" data-lang="danish">En undersøgelse af, hvordan den svindende is forandrer geopolitikken i det høje Nord.</p>
             
             <div class="insight-footer">
-                <span class="date">16 May 2026</span>
+                <span class="date">16 January 2026</span>
             </div>
         </div>
     </article>
