--- a/insights.html
+++ b/insights.html
@@ -156,7 +156,7 @@
             </article>
         </a>
 
-<a href="articles/2026-06-17/article.html" class="insight-item-link" data-category="commentary">
+<a href="articles/2026-06-17/" class="insight-item-link" data-category="commentary">
     <article class="insight-card">
         <div class="insight-thumbnail">
             <img src="articles/2026-06-17/small.jpg" alt="Thumbnail" style="width:100%; border-radius: 8px; margin-bottom: 1.5rem;">
@@ -328,4 +328,5 @@
         });
     </script>
 </body>
+
 </html>
