--- a/index.html
+++ b/index.html
@@ -177,9 +177,11 @@
         <section class="living-list-container">
             <div class="ticker-wrapper">
 		<span style="display:none;">🆕</span>
-            <div class="ticker-item"><span class="ticker-date">16 MAY 2026</span><i class="fa-solid fa-file-lines"></i> Article: The Future of Arctic Trade Routes</div>
+            <div class="ticker-item"><span class="ticker-date">31 JANUARY 2026</span><i class="fa-solid fa-file-lines"></i> Article: Greenland’s Readiness for New Shipping and Travel</div>
 
-            <div class="ticker-item"><span class="ticker-date">20 MAY 2026</span><i class="fa-solid fa-file-lines"></i> Article: Diplomatic Horizons: Greenland’s New Voice</div>
+            <div class="ticker-item"><span class="ticker-date">20 JANUARY 2026</span><i class="fa-solid fa-file-lines"></i> Article: Diplomatic Horizons: Greenland’s New Voice</div>
+
+            <div class="ticker-item"><span class="ticker-date">16 JANUARY 2026</span><i class="fa-solid fa-file-lines"></i> Article: The Future of Arctic Trade Routes</div>
 
                 <div class="ticker-item"><span class="ticker-date">FEB 2026</span><i class="fa-solid fa-file-lines"></i> Article: Arctic Security Update</div>
                 <div class="ticker-item"><span class="ticker-date">JAN 2026</span><i class="fa-solid fa-calendar-check"></i> Event: Nuuk Dialogue Forum</div>
